feat: improved tracing and querying
